# Directory

./: .dockerignore  .env  .gitattributes  .gitignore  .project  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.standalone  LICENSE.md  Makefile  README.md  about.hbs  about.toml  index.xhtml
.github/: dependabot.yml
.github/workflows/: build-image.yml  rust.yml
css/: dark-mode-switch.js  dark-mode.css  directory.css  gh-fork-ribbon.css
migrations/2020-03-28-145311_create_instances/: down.sql  up.sql
migrations/2020-03-29-123508_add_attachments/: down.sql  up.sql
migrations/2020-04-04-074635_add_checks/: up.sql
migrations/2020-04-10-041349_checks_delete_cascade/: down.sql  up.sql
migrations/2020-04-15-023338_scans/: up.sql
migrations/2022-03-20-112748_add_csp/: down.sql  up.sql
migrations/2024-03-12-044346_add_variant/: down.sql  up.sql
src/: connections.rs  fairings.rs  functions.rs  main.rs  models.rs  schema.rs  tasks.rs  tests.rs
src/models/: jistsi.rs  privatebin.rs
templates/: about.html.tera  add.html.tera  base.html.tera  check.html.tera  form.html.tera  list.html.tera  macros.html.tera
var/: directory.sqlite
