[package]
name = "directory"
version = "0.15.3"
authors = ["El RIDO <elrido@gmx.net>"]
edition = "2021"
license = "AGPL-3.0"
rust-version = "1.78"

[dependencies]
diesel_migrations = "2.2.0"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper-util = "0.1.11"
isocountry = "0.3.2"
maxminddb = "0.26.0"
rand = "0.9.0"
regex = "1.11.1"
tokio = "1.44.2"
url = "2.5.4"

[dependencies.diesel]
version = "2.2.9"
features = ["sqlite"]

[dependencies.hyper]
version = "1.6.0"
features = ["client"]

[dependencies.hyper-rustls]
version = "0.27.5"
default-features = false
features = ["http1", "http2", "tls12", "ring", "webpki-tokio"]

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
strip = true
