[package]
name = "directory"
version = "0.18.6"
authors = ["El RIDO <elrido@gmx.net>"]
edition = "2021"
license = "AGPL-3.0"
rust-version = "1.80"

[dependencies]
diesel_migrations = "2.2.0"
futures = "0.3.32"
http-body-util = "0.1.3"
hyper-util = "0.1.20"
isocountry = "0.3.2"
maxminddb = "0.27.3"
rand = "0.10.1"
regex = "1.12.3"
tokio = "1.52.1"
url = "2.5.8"

[dependencies.diesel]
version = "2.2.12"
features = ["sqlite"]

[dependencies.hyper]
version = "1.9.0"
features = ["client"]

[dependencies.hyper-rustls]
version = "0.27.7"
default-features = false
features = ["http1", "http2", "tls12", "ring", "webpki-tokio"]

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
strip = true
